<resources>
    <string name="app_name">Mascotas_s5</string>


    <string name="titulo_actionbar">Petagram</string>
    <string name="nombre">Nombre</string>
    <string name="raiting">5</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="email">E-mail</string>
    <string name="comentario">Comentario</string>
    <string name="enviar_comentario">Enviar comentario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
