<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taocontrol.mascotas_s5.ContactoActivity"
    android:background="@color/cafe"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar2"
        layout="@layout/actionbar2">
    </include>

    <TextView
        android:id="@+id/tvContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/contacto"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="@dimen/tamanio_titulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/negro">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                >

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiComentario"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="top"
                android:hint="@string/comentario">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/enviar_comentario"
            android:background="@color/colorAccent"
            android:textColor="@color/blanco"
            android:textSize="@dimen/tamanio_nombre"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
